# zero-to-production-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  docker-compose.yml  template.yaml
.github/.actions/: general.yml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-2d8be1f055037d2ca59c18393d3fd5e775132062a34d3d3679b3d7984fd31009.json  query-753c8ecfac0ea7d052e60cb582e3b3ebac5e50eb133152712ca18ab5d5e202f3.json  query-9df1db00b3155ceb51938953bfdcba1a2051d6d4ceaece4d0fb59100a181fec7.json  query-a71a1932b894572106460ca2e34a63dc0cb8c1ba7a70547add1cddbb68133c2b.json  query-ad120337ee606be7b8d87238e2bb765d0da8ee61b1a3bc142414c4305ec5e17f.json  query-f6582059cd25113ccd788716e8518dba884fd6e40b1a9b689c961a8214d2b67f.json
cdk/: package-lock.json  package.json
cdk/lib/: api-stack.ts  application-stack.ts  new-subscriber-stack.ts  send-newsletter-stack.ts
infrastructure/: cache.tf  database.tf  network.tf  outputs.tf  versions.tf
migrations/: 20231217143652_create_subscriptions_table.sql  20231218213155_update-id-text.sql  20231221133205_make_status_not_null_in_subscriptions.sql  20231221133439_create_subscription_tokens_table.sql  20240108075905_rename_password_column.sql  20240109070921_add_salt_to_users.sql  20240109070934_remove_salt_from_users.sql  20240109070941_seed_user.sql
scripts/: init_db.sh
src/: Cargo.toml  configuration.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/adapters/: dynamodb_subscriber_repository.rs  dynamodb_user_repository.rs  mod.rs  postgres_subscriber_repository.rs  postmark_email_client.rs
src/api/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/api/scripts/: init_db.sh
src/api/src/: configuration.rs  lib.rs  main.rs  middleware.rs  startup.rs  telemetry.rs  utils.rs
src/api/src/adapters/: dynamo_db_session_store.rs  dynamodb_subscriber_repository.rs  dynamodb_user_repository.rs  mod.rs  s3_newsletter_metadata_storage.rs
src/api/src/authentication/: middleware.rs  password.rs  user_repository.rs
src/api/src/domain/: mod.rs  new_subscriber.rs  newsletter_metadata.rs  newsletter_store.rs  subscriber_name.rs  subscriber_repository.rs
src/api/src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/api/src/routes/admin/: dashboard.rs  migrate.rs
src/api/src/routes/admin/newsletter/: post.rs
src/api/src/routes/admin/password/: post.rs
src/api/src/routes/login/: login.html  post.rs
src/api/tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/authentication/: middleware.rs  mod.rs  password.rs  user_repository.rs
src/backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-SendConfirmation  Dockerfile-SendNewsletter  template.yaml
src/backend/scripts/: init_db.sh
src/backend/src/: configuration.rs  handler.rs  lib.rs  main.rs  send_confirmation_handler.rs  send_newsletter_handler.rs  telemetry.rs  utils.rs
src/backend/src/adapters/: dynamo_db_subscriber_repository.rs  dynamodb_subscriber_repository.rs  mod.rs  postmark_email_client.rs  s3_newsletter_service.rs
src/backend/src/domain/: confirmed_subscriber.rs  email_client.rs  mod.rs  newsletter_metadata.rs  newsletter_store.rs  subscriber_email.rs  subscriber_repository.rs
src/backend/tests/backend-tests/: helpers.rs  main.rs  stream_processing.rs
src/domain/: email_client.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_repository.rs
src/routes/: health_check.rs  migrate.rs  mod.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: post.rs
src/routes/login/: get.rs  login.html  post.rs
src/telemetry/: Cargo.toml
src/telemetry/src/: lib.rs  telemetry.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
