[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0", default-features = false, features = ["sqs"] }
lambda_runtime = {version = "0", optional = true }
lambda-extension = "0.10"
async-trait = "0"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "macros"]}
serde = {version = "1", features = ["derive"]}
config = "0.14"
ulid-rs = "0.1.0"
chrono = {version="0.4.31", default-features = false, features = ["clock"]}
tracing = "0"
tracing-subscriber ={version="0", features = ["registry", "env-filter", "std", "fmt"]}
tracing-bunyan-formatter = "0"
tracing-log = "0"
tracing-opentelemetry = { version="0", features = ["tracing-log", "async-trait", "default"] }
tonic = "0"
secrecy = { version = "0", features = ["serde"] }
opentelemetry = { version = "0", features = ["trace"] }
opentelemetry-otlp = { version = "0", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0"
opentelemetry_sdk = { version = "0", features = ["rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0", features = ["collector_client", "isahc_collector_client"] }
unicode-segmentation = "1"
validator = "0"
rand = "0"
opentelemetry-stdout = "0"
thiserror = "1"
anyhow = "1"
openssl = { version = "0.10", features = ["vendored"] }
serde_urlencoded = "0"
serde_json = { version = "1" }
base64 = "0"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = { version = "0", features = ["std"] }
aws-sdk-dynamodb = "1"
aws-sdk-ssm = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-runtime = "1"
hyper = {version="1.1.0", features=["client"]}
hyper-rustls = {version = "0.24.2", features=["webpki-roots"]}
serde_dynamo = "4.2.13"

telemetry = { path = "../telemetry" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
claims = "0.7"
fake = "2.6.1"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
uuid = {version="1", features = ["v4"]}
tokio = {version = "1", features = ["rt", "macros"]}
wiremock = "0"
serde_json = "1"
linkify = "0.10"

[features]
default = ["lambda"]
lambda = ["lambda_runtime"]

[[bin]]
name = "send_confirmation"
path = "src/bin/lambda/send_confirmation.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "send_newsletter"
path = "src/bin/lambda/send_newsletter.rs"
test = false
required-features = ["lambda"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3