[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["sqs", "dynamodb"] }
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.20", features = ["collector_client", "isahc_collector_client"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = {version = "1", features = ["derive"]}
serde_json = { version = "1" }
serde_dynamo = "4.2.13"
tracing = "0.1"
tracing-subscriber ={version="0.3", features = ["registry", "env-filter", "std", "fmt"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-opentelemetry = { version="0.22", features = ["tracing-log", "async-trait", "default"] }
config = "0.14.0"
reqwest = "0.11.24"
actix-web = "4"
actix-web-opentelemetry = "0.16"
tracing-actix-web = { version = "0.7.9", features = ["opentelemetry_0_21"] }
